# cue

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
ctrlk/: __init__.py  __main__.py  config.py  daemon.py  embedder.py  history.py  resolver.py  router.py  shell_install.py  store.py  validator.py
ctrlk/providers/: __init__.py  anthropic.py  base.py  registry.py
ctrlk/shell/: __init__.py  ctrlk.zsh
cue/: __init__.py  __main__.py  cache_promotion.py  cli_setup.py  config.py  config_io.py  context.py  daemon.py  embedder.py  history.py  keys.py  paths.py  resolver.py  router.py  shell_install.py  store.py  validator.py
cue/providers/: anthropic.py  base.py  openai_compat.py  registry.py
cue/shell/: __init__.py  cue.bash  cue.zsh
docs/: ARCH.md  CLAUDE.md
shell/: ctrlk.zsh
tests/: test_cache_promotion.py  test_cli_setup.py  test_daemon_cli.py  test_embedder.py  test_history.py  test_paths.py  test_providers.py  test_resolver.py  test_shell_install.py  test_store.py  test_validator.py
tests/fixtures/: anthropic_response.json  openai_response.json  openrouter_response.json
