[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctrlk"
version = "0.1.0"
description = "AI-native terminal Ctrl+K: natural language to shell commands, in your buffer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tomllib>=0.0.0; python_version < '3.11'",  # stdlib in 3.11+
    "tomli>=2.0.0; python_version < '3.11'",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
ctrlk = "ctrlk.__main__:main"
ctrlk-daemon = "ctrlk.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["ctrlk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
