[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cue"
version = "0.1.0"
description = "Cue: AI-native terminal Ctrl+K — natural language to shell commands, in your buffer."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastembed>=0.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
cue = "cue.__main__:main"
cue-daemon = "cue.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["cue"]

[tool.hatch.build.targets.wheel.force-include]
"cue/shell/cue.zsh" = "cue/shell/cue.zsh"
"cue/shell/cue.bash" = "cue/shell/cue.bash"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
